content/matematica-discreta/avaliacoes/2024.2/listas/lista-1.mdx
---
title: Lista 1 — Matrizes e conjuntos
description: Lista de exercícios 1 de Matemática Aplicada à Computação (2024.2), com resolução comentada.
order: 1
prerequisites:
  - /docs/matematica-discreta/matrizes
  - /docs/matematica-discreta/conjuntos
---

Lista de exercícios 1 de **Matemática Aplicada à Computação** — Instituto
Federal da Paraíba, curso de Tecnologia em Análise e Desenvolvimento de
Sistemas, 1º período, semestre **2024.2**, professor Suemilton Nunes
Gervázio. Cobre matrizes, matrizes booleanas e teoria dos conjuntos. Tente
cada questão sozinho antes de abrir a **resposta**.

## Questão 1

<Question>
Se a matriz a seguir é simétrica, então determine o valor de $x^{2} - y^{2}$.

$$
\begin{bmatrix}
1 & x & y-1 \\
y-1 & 0 & x+5 \\
x & 7 & -1
\end{bmatrix}
$$

<Resolution>

$A$ é simétrica quando $a_{ij} = a_{ji}$ para todo par $(i,j)$. Comparando as
posições espelhadas:

Posições $(1,2)$ e $(2,1)$: $x = y-1$

Posições $(1,3)$ e $(3,1)$: $y-1 = x$ (mesma equação da anterior)

Posições $(2,3)$ e $(3,2)$: $x+5 = 7 \;\Rightarrow\; x = 2$

Substituindo $x=2$ em $x = y-1$: $2 = y-1 \;\Rightarrow\; y = 3$.

$$
x^{2} - y^{2} = 2^{2} - 3^{2} = 4 - 9 = -5
$$

</Resolution>

<Answer>
$x^{2} - y^{2} = -5$
</Answer>
</Question>

## Questão 2

<Question>
Se a matriz a seguir é simétrica, então resolva a equação $2x - 3y = z$.

$$
\begin{bmatrix}
Y & 36 & -7 \\
x^{2} & 0 & 5x \\
4-y & -30 & 3
\end{bmatrix}
$$

<Resolution>

$Y$ fica na diagonal principal, então não entra em nenhuma equação de
simetria. Comparando as demais posições espelhadas:

Posições $(1,2)$ e $(2,1)$: $36 = x^{2} \;\Rightarrow\; x = \pm 6$

Posições $(1,3)$ e $(3,1)$: $-7 = 4-y \;\Rightarrow\; y = 11$

Posições $(2,3)$ e $(3,2)$: $5x = -30 \;\Rightarrow\; x = -6$

O valor de $x$ que satisfaz as duas equações é $x=-6$. Substituindo em
$z = 2x - 3y$:

$$
z = 2(-6) - 3(11) = -12 - 33 = -45
$$

</Resolution>

<Answer>
$x = -6$, $y = 11$ e $z = -45$
</Answer>
</Question>

## Questão 3

<Question>
Determine o elemento $C_{22}$ da matriz $C = A \times B$, onde

$$
A =
\begin{bmatrix} 2 & 3 & 1 \\ -1 & 0 & 2 \end{bmatrix}
\qquad
B =
\begin{bmatrix} 1 & -2 \\ 0 & 5 \\ 4 & 1 \end{bmatrix}
$$

<Resolution>

$C_{22}$ é o produto da linha $2$ de $A$ pela coluna $2$ de $B$:

$$
C_{22} = (-1)(-2) + (0)(5) + (2)(1) = 2 + 0 + 2 = 4
$$

</Resolution>

<Answer>
$C_{22} = 4$
</Answer>
</Question>

## Questão 4

<Question>
Uma matriz quadrada $A$ de ordem $2$ possui lei de formação $b_{ij} = 2i +
3j - 5$ e a matriz

$$
B =
\begin{bmatrix} 10 & 2 \\ 3 & -1 \end{bmatrix}
$$

Assim, determine $A \times B$ e $B \times (-2A)$.

<Resolution>

Calculando cada termo de $A$ com $a_{ij} = 2i + 3j - 5$:

$$
a_{11}=2(1)+3(1)-5=0 \qquad a_{12}=2(1)+3(2)-5=3
$$

$$
a_{21}=2(2)+3(1)-5=2 \qquad a_{22}=2(2)+3(2)-5=5
$$

$$
A = \begin{bmatrix} 0 & 3 \\ 2 & 5 \end{bmatrix}
$$

$$
A \times B =
\begin{bmatrix}
0(10)+3(3) & 0(2)+3(-1) \\
2(10)+5(3) & 2(2)+5(-1)
\end{bmatrix}
=
\begin{bmatrix} 9 & -3 \\ 35 & -1 \end{bmatrix}
$$

Para $B \times (-2A)$, primeiro invertemos o sinal de $A$ e multiplicamos por
$2$:

$$
-2A = \begin{bmatrix} 0 & -6 \\ -4 & -10 \end{bmatrix}
$$

$$
B \times (-2A) =
\begin{bmatrix}
10(0)+2(-4) & 10(-6)+2(-10) \\
3(0)+(-1)(-4) & 3(-6)+(-1)(-10)
\end{bmatrix}
=
\begin{bmatrix} -8 & -80 \\ 4 & -8 \end{bmatrix}
$$

</Resolution>

<Answer>
$$
A \times B = \begin{bmatrix} 9 & -3 \\ 35 & -1 \end{bmatrix}
\qquad
B \times (-2A) = \begin{bmatrix} -8 & -80 \\ 4 & -8 \end{bmatrix}
$$
</Answer>
</Question>

## Questão 5 <Badge>SEEDUCRJ, adaptada</Badge>

<Question>
Sejam dadas as matrizes

$$
A =
\begin{bmatrix} 2 & -1 \\ 1 & 0 \end{bmatrix}
\qquad
B =
\begin{bmatrix} 3 & 1 \\ 1 & 2 \end{bmatrix}
$$

onde se tem que $A \cdot X = A + B$. Assim, determine a matriz $X$.

<Resolution>

Primeiro calculamos $A + B$:

$$
A + B = \begin{bmatrix} 5 & 0 \\ 2 & 2 \end{bmatrix}
$$

Escrevendo $X = \begin{bmatrix} a & b \\ c & d \end{bmatrix}$, temos:

$$
A \cdot X =
\begin{bmatrix} 2 & -1 \\ 1 & 0 \end{bmatrix}
\begin{bmatrix} a & b \\ c & d \end{bmatrix}
=
\begin{bmatrix} 2a-c & 2b-d \\ a & b \end{bmatrix}
$$

Igualando a $A+B$, posição por posição:

- $(2,1)$: $a = 2$
- $(2,2)$: $b = 2$
- $(1,1)$: $2a - c = 5 \;\Rightarrow\; 4 - c = 5 \;\Rightarrow\; c = -1$
- $(1,2)$: $2b - d = 0 \;\Rightarrow\; 4 - d = 0 \;\Rightarrow\; d = 4$

</Resolution>

<Answer>
$$
X = \begin{bmatrix} 2 & 2 \\ -1 & 4 \end{bmatrix}
$$
</Answer>
</Question>

## Questão 6 <Badge>Anglo, adaptada</Badge>

<Question>
Sejam $A$, $B$ e $C$ matrizes onde

$$
A =
\begin{bmatrix} x+3 & 11 \\ 9 & 2y-7 \end{bmatrix}
\qquad
B =
\begin{bmatrix} -4 & -5 \\ 2 & 9 \end{bmatrix}
\qquad
C =
\begin{bmatrix} -1 & 16 \\ 7 & 4 \end{bmatrix}
$$

Sabendo que $A = B + C$, então qual é o valor de $x + y$?

<Resolution>

Somando $B + C$ termo a termo:

$$
B + C = \begin{bmatrix} -5 & 11 \\ 9 & 13 \end{bmatrix}
$$

Igualando a $A$, posição por posição:

$$
x+3 = -5 \;\Rightarrow\; x = -8
$$

$$
2y-7 = 13 \;\Rightarrow\; 2y = 20 \;\Rightarrow\; y = 10
$$

$$
x + y = -8 + 10 = 2
$$

</Resolution>

<Answer>
$x + y = 2$
</Answer>
</Question>

## Questão 7

<Question>
Se $A$ e $B$ são duas matrizes onde

$$
A =
\begin{bmatrix} 1 & 2 & 3 \\ 0 & 1 & 4 \\ 0 & 0 & 1 \end{bmatrix}
\qquad
B =
\begin{bmatrix} 1 & -2 & 5 \\ 0 & 1 & -4 \\ 0 & 0 & 1 \end{bmatrix}
$$

Então qual a matriz resultante de $[A \cdot B]^{2023}$?

<Resolution>

Calculando $A \cdot B$ termo a termo:

$$
A \cdot B =
\begin{bmatrix}
1(1)+2(0)+3(0) & 1(-2)+2(1)+3(0) & 1(5)+2(-4)+3(1) \\
0(1)+1(0)+4(0) & 0(-2)+1(1)+4(0) & 0(5)+1(-4)+4(1) \\
0(1)+0(0)+1(0) & 0(-2)+0(1)+1(0) & 0(5)+0(-4)+1(1)
\end{bmatrix}
=
\begin{bmatrix} 1&0&0 \\ 0&1&0 \\ 0&0&1 \end{bmatrix} = I_{3}
$$

Como $A \cdot B = I_{3}$, qualquer potência da identidade é ela mesma:

$$
[A \cdot B]^{2023} = I_{3}^{2023} = I_{3}
$$

</Resolution>

<Answer>
$$
[A \cdot B]^{2023} = \begin{bmatrix} 1&0&0 \\ 0&1&0 \\ 0&0&1 \end{bmatrix}
$$
</Answer>
</Question>

## Questão 8 <Badge>Anglo, adaptada</Badge>

<Question>
Sejam as matrizes

$$
A = \begin{bmatrix} 0 & -1 \\ -1 & 0 \end{bmatrix}
\qquad
B = \begin{bmatrix} 1 & 1 \\ 0 & 1 \end{bmatrix}
$$

Determine $A^{102}$.

<Alternatives>
  <Alternative>$A$</Alternative>
  <Alternative>$-1 \cdot A$</Alternative>
  <Alternative>$I_{2}$</Alternative>
  <Alternative>$-I_{2}$</Alternative>
  <Alternative>$-2 \cdot A$</Alternative>
</Alternatives>

<Resolution>

O caminho mais direto é calcular $A^{2}$:

$$
A^{2} =
\begin{bmatrix} 0&-1 \\ -1&0 \end{bmatrix}
\begin{bmatrix} 0&-1 \\ -1&0 \end{bmatrix}
=
\begin{bmatrix} 1&0 \\ 0&1 \end{bmatrix} = I_{2}
$$

Como $A^{2} = I_{2}$, toda potência par de $A$ é $I_{2}$. Sendo $102$ par:

$$
A^{102} = (A^{2})^{51} = I_{2}^{51} = I_{2}
$$

</Resolution>

<Answer>
c) $I_{2}$
</Answer>
</Question>

## Questão 9 <Badge>Anglo, adaptada</Badge>

<Question>
Com as mesmas matrizes $A$ e $B$ da questão anterior, determine $B^{3}$.

<Alternatives>
  <Alternative>$\begin{bmatrix} 1&0 \\ 0&1 \end{bmatrix}$</Alternative>
  <Alternative>$\begin{bmatrix} 1&2 \\ 0&1 \end{bmatrix}$</Alternative>
  <Alternative>$\begin{bmatrix} 1&3 \\ 0&1 \end{bmatrix}$</Alternative>
  <Alternative>$\begin{bmatrix} -1&0 \\ 0&-1 \end{bmatrix}$</Alternative>
  <Alternative>$\begin{bmatrix} 0&1 \\ 1&0 \end{bmatrix}$</Alternative>
</Alternatives>

<Resolution>

$$
B^{2} = B \cdot B =
\begin{bmatrix} 1&1 \\ 0&1 \end{bmatrix}
\begin{bmatrix} 1&1 \\ 0&1 \end{bmatrix}
=
\begin{bmatrix} 1&2 \\ 0&1 \end{bmatrix}
$$

$$
B^{3} = B^{2} \cdot B =
\begin{bmatrix} 1&2 \\ 0&1 \end{bmatrix}
\begin{bmatrix} 1&1 \\ 0&1 \end{bmatrix}
=
\begin{bmatrix} 1&3 \\ 0&1 \end{bmatrix}
$$

</Resolution>

<Answer>
c) $\begin{bmatrix} 1&3 \\ 0&1 \end{bmatrix}$
</Answer>
</Question>

## Questão 10 <Badge>Anglo, adaptada</Badge>

<Question>
Com as mesmas matrizes $A$ e $B$ da questão 8, determine $A^{102} \cdot
B^{3}$.

<Alternatives>
  <Alternative>$\begin{bmatrix} 1&0 \\ 0&1 \end{bmatrix}$</Alternative>
  <Alternative>$\begin{bmatrix} 1&2 \\ 0&1 \end{bmatrix}$</Alternative>
  <Alternative>$\begin{bmatrix} 1&3 \\ 0&1 \end{bmatrix}$</Alternative>
  <Alternative>$\begin{bmatrix} -1&0 \\ 0&-1 \end{bmatrix}$</Alternative>
  <Alternative>$\begin{bmatrix} 0&1 \\ 1&0 \end{bmatrix}$</Alternative>
</Alternatives>

<Resolution>

Usando os resultados das questões 8 e 9, $A^{102} = I_{2}$ e $B^{3} =
\begin{bmatrix} 1&3 \\ 0&1 \end{bmatrix}$. Multiplicar por $I_{2}$ não altera
a matriz:

$$
A^{102} \cdot B^{3} = I_{2} \cdot \begin{bmatrix} 1&3 \\ 0&1 \end{bmatrix} =
\begin{bmatrix} 1&3 \\ 0&1 \end{bmatrix}
$$

</Resolution>

<Answer>
c) $\begin{bmatrix} 1&3 \\ 0&1 \end{bmatrix}$
</Answer>
</Question>

## Questão 11 <Badge>Cefet MG</Badge>

<Question>
A matriz $A$ é inversa de $B$. Pode-se afirmar que a diferença $x - y$ é
igual a:

$$
A =
\begin{pmatrix} 2 & 5 \\ 1 & x \end{pmatrix}
\qquad
B =
\begin{pmatrix} 3 & y \\ -1 & 2 \end{pmatrix}
$$

<Alternatives>
  <Alternative>$-8$</Alternative>
  <Alternative>$-2$</Alternative>
  <Alternative>$2$</Alternative>
  <Alternative>$6$</Alternative>
  <Alternative>$8$</Alternative>
</Alternatives>

<Resolution>

Se $A$ é inversa de $B$, então $B \cdot A = I_{2}$:

$$
B \cdot A =
\begin{pmatrix} 3 & y \\ -1 & 2 \end{pmatrix}
\begin{pmatrix} 2 & 5 \\ 1 & x \end{pmatrix}
=
\begin{pmatrix} 6+y & 15+xy \\ -2+2 & -5+2x \end{pmatrix}
=
\begin{pmatrix} 1 & 0 \\ 0 & 1 \end{pmatrix}
$$

Da posição $(1,1)$: $6+y=1 \;\Rightarrow\; y=-5$

Da posição $(2,2)$: $-5+2x=1 \;\Rightarrow\; x=3$

Conferindo na posição $(1,2)$: $15+xy = 15+3(-5) = 0$ ✓

$$
x - y = 3 - (-5) = 8
$$

</Resolution>

<Answer>
e) $8$
</Answer>
</Question>

## Questão 12

<Question>
Sejam as matrizes booleanas a seguir:

$$
A =
\begin{pmatrix} 1 & 0 \\ 0 & 1 \end{pmatrix}
\qquad
B =
\begin{pmatrix} 0 & 0 \\ 1 & 1 \end{pmatrix}
\qquad
C =
\begin{pmatrix} 1 & 0 \\ 1 & 1 \end{pmatrix}
$$

Assim, determine:

a) $A \vee B$

b) $A \vee C$

c) $B \vee C$

d) $A \wedge B$

e) $A \wedge C$

f) $B \wedge C$

g) $A \times B$

h) $B \times C$

<Resolution>

Em $\vee$ (OU, elemento a elemento) e $\wedge$ (E, elemento a elemento):

$$
A \vee B = \begin{pmatrix} 1&0 \\ 1&1 \end{pmatrix}
\qquad
A \vee C = \begin{pmatrix} 1&0 \\ 1&1 \end{pmatrix}
\qquad
B \vee C = \begin{pmatrix} 1&0 \\ 1&1 \end{pmatrix}
$$

$$
A \wedge B = \begin{pmatrix} 0&0 \\ 0&1 \end{pmatrix}
\qquad
A \wedge C = \begin{pmatrix} 1&0 \\ 0&1 \end{pmatrix}
\qquad
B \wedge C = \begin{pmatrix} 0&0 \\ 1&1 \end{pmatrix}
$$

Na multiplicação booleana, cada posição $(i,j)$ é o OU dos E entre a linha de
uma matriz e a coluna da outra:

$$
A \times B =
\begin{pmatrix}
(1\wedge0)\vee(0\wedge1) & (1\wedge0)\vee(0\wedge1) \\
(0\wedge0)\vee(1\wedge1) & (0\wedge0)\vee(1\wedge1)
\end{pmatrix}
=
\begin{pmatrix} 0&0 \\ 1&1 \end{pmatrix}
$$

$$
B \times C =
\begin{pmatrix}
(0\wedge1)\vee(0\wedge1) & (0\wedge0)\vee(0\wedge1) \\
(1\wedge1)\vee(1\wedge1) & (1\wedge0)\vee(1\wedge1)
\end{pmatrix}
=
\begin{pmatrix} 0&0 \\ 1&1 \end{pmatrix}
$$

</Resolution>

<Answer>
$$
A \vee B = A \vee C = B \vee C = \begin{pmatrix} 1&0 \\ 1&1 \end{pmatrix}
$$

$$
A \wedge B = \begin{pmatrix} 0&0 \\ 0&1 \end{pmatrix}
\qquad
A \wedge C = \begin{pmatrix} 1&0 \\ 0&1 \end{pmatrix}
\qquad
B \wedge C = \begin{pmatrix} 0&0 \\ 1&1 \end{pmatrix}
$$

$$
A \times B = B \times C = \begin{pmatrix} 0&0 \\ 1&1 \end{pmatrix}
$$
</Answer>
</Question>

## Questão 13

<Question>
Sejam as matrizes booleanas $A$, $B$ e $C$ apresentadas a seguir:

$$
A =
\begin{bmatrix} 1&0&1 \\ 0&1&0 \\ 1&1&1 \end{bmatrix}
\qquad
B =
\begin{bmatrix} 0&0&1 \\ 0&0&0 \\ 0&1&0 \end{bmatrix}
\qquad
C =
\begin{bmatrix} 1&1&1 \\ 0&1&0 \\ 1&1&0 \end{bmatrix}
$$

Assim, calcule:

a) $(C \wedge B) \vee A$

b) $A \times B$ (multiplicação booleana de matrizes)

c) $B \times C$ (multiplicação booleana de matrizes)

d) $A \times C$ (multiplicação booleana de matrizes)

<Resolution>

a) Primeiro $C \wedge B$ (E lógico, elemento a elemento):

$$
C \wedge B =
\begin{bmatrix} 0&0&1 \\ 0&0&0 \\ 0&1&0 \end{bmatrix}
$$

Depois $(C \wedge B) \vee A$ (OU lógico, elemento a elemento):

$$
(C \wedge B) \vee A =
\begin{bmatrix} 0&0&1 \\ 0&0&0 \\ 0&1&0 \end{bmatrix}
\vee
\begin{bmatrix} 1&0&1 \\ 0&1&0 \\ 1&1&1 \end{bmatrix}
=
\begin{bmatrix} 1&0&1 \\ 0&1&0 \\ 1&1&1 \end{bmatrix}
$$

b) Na multiplicação booleana, cada posição $(i,j)$ é $\bigvee_k (a_{ik}
\wedge b_{kj})$:

$$
A \times B =
\begin{bmatrix} 0&1&1 \\ 0&0&0 \\ 0&1&1 \end{bmatrix}
$$

c) Repetindo o processo para $B \times C$:

$$
B \times C =
\begin{bmatrix} 1&1&0 \\ 0&0&0 \\ 0&1&0 \end{bmatrix}
$$

d) E para $A \times C$:

$$
A \times C =
\begin{bmatrix} 1&1&1 \\ 0&1&0 \\ 1&1&1 \end{bmatrix}
$$

</Resolution>

<Answer>
$$
(C \wedge B) \vee A = \begin{bmatrix} 1&0&1 \\ 0&1&0 \\ 1&1&1 \end{bmatrix}
$$

$$
A \times B = \begin{bmatrix} 0&1&1 \\ 0&0&0 \\ 0&1&1 \end{bmatrix}
\qquad
B \times C = \begin{bmatrix} 1&1&0 \\ 0&0&0 \\ 0&1&0 \end{bmatrix}
\qquad
A \times C = \begin{bmatrix} 1&1&1 \\ 0&1&0 \\ 1&1&1 \end{bmatrix}
$$
</Answer>
</Question>

## Questão 14

<Question>
Escreva o seguinte conjunto, fornecendo-lhe uma propriedade característica
que envolve todos os elementos.

$$
A = \{-4, -1, 8, 23, 44, 71, \ldots\}
$$

<Resolution>

Numerando os termos a partir de $n = 0$, montamos a tabela de diferenças: a
linha $\Delta$ traz a diferença entre cada termo e o **anterior** (não são os
elementos do conjunto), e $\Delta^{2}$ faz o mesmo sobre a linha $\Delta$.

$$
\begin{array}{r|rrrrrr}
n & 0 & 1 & 2 & 3 & 4 & 5 \\
\hline
f(n) & -4 & -1 & 8 & 23 & 44 & 71 \\
\Delta & & 3 & 9 & 15 & 21 & 27 \\
\Delta^{2} & & & 6 & 6 & 6 & 6
\end{array}
$$

As segundas diferenças são constantes e iguais a $6$ — logo o termo geral é
de $2°$ grau: $f(n) = an^{2} + bn + c$.

$$
f(0) = c = -4
$$

$$
f(1) = a+b+c = -1 \;\Rightarrow\; a+b = 3
$$

$$
f(2) = 4a+2b+c = 8 \;\Rightarrow\; 4a+2b = 12 \;\Rightarrow\; 2a+b = 6
$$

Subtraindo $a+b=3$ de $2a+b=6$: $a = 3$, logo $b = 0$.

$$
f(n) = 3n^{2} - 4
$$

</Resolution>

<Answer>
$$
A = \{x \in \mathbb{Z} / x = 3n^{2}-4,\ n \in \mathbb{N}\}
$$
</Answer>
</Question>

## Questão 15

<Question>
Escreva o seguinte conjunto, fornecendo-lhe uma propriedade característica
que envolve todos os elementos.

$$
A = \{2, 7, 12, 17, 22, 27, 32, \ldots\}
$$

<Resolution>

Numerando os termos a partir de $n = 0$, a linha $\Delta$ traz a diferença
entre cada termo e o **anterior** (não são os elementos do conjunto):

$$
\begin{array}{r|rrrrrrr}
n & 0 & 1 & 2 & 3 & 4 & 5 & 6 \\
\hline
f(n) & 2 & 7 & 12 & 17 & 22 & 27 & 32 \\
\Delta & & 5 & 5 & 5 & 5 & 5 & 5
\end{array}
$$

As primeiras diferenças já são constantes e iguais a $5$ — logo o termo geral
é de $1°$ grau: $f(n) = an+b$.

$$
f(0) = b = 2 \qquad f(1) = a+b = 7 \;\Rightarrow\; a = 5
$$

$$
f(n) = 5n + 2
$$

</Resolution>

<Answer>
$$
A = \{x \in \mathbb{N} / x = 5n+2,\ n \in \mathbb{N}\}
$$
</Answer>
</Question>

## Questão 16

<Question>
Escreva o seguinte conjunto, fornecendo-lhe uma propriedade característica
que envolve todos os elementos.

$$
A = \{3, 4, 11, 30, 67, 128, \ldots\}
$$

<Resolution>

Numerando os termos a partir de $n = 0$, montamos a tabela de diferenças: a
linha $\Delta$ traz a diferença entre cada termo e o **anterior** (não são os
elementos do conjunto), e cada linha seguinte repete o processo sobre a
anterior.

$$
\begin{array}{r|rrrrrr}
n & 0 & 1 & 2 & 3 & 4 & 5 \\
\hline
f(n) & 3 & 4 & 11 & 30 & 67 & 128 \\
\Delta & & 1 & 7 & 19 & 37 & 61 \\
\Delta^{2} & & & 6 & 12 & 18 & 24 \\
\Delta^{3} & & & & 6 & 6 & 6
\end{array}
$$

As terceiras diferenças são constantes e iguais a $6$ — logo o termo geral é
de $3°$ grau: $f(n) = an^{3}+bn^{2}+cn+d$.

$$
f(0) = d = 3
$$

$$
f(1) = a+b+c+d = 4 \;\Rightarrow\; a+b+c = 1
$$

$$
f(2) = 8a+4b+2c+d = 11 \;\Rightarrow\; 4a+2b+c = 4
$$

$$
f(3) = 27a+9b+3c+d = 30 \;\Rightarrow\; 9a+3b+c = 9
$$

Subtraindo cada equação da seguinte para eliminar $c$:

$$
3a+b = 3 \qquad 5a+b = 5
$$

Subtraindo novamente: $2a = 2 \;\Rightarrow\; a = 1$, logo $b = 0$ e $c = 0$.

$$
f(n) = n^{3} + 3
$$

</Resolution>

<Answer>
$$
A = \{x \in \mathbb{N} / x = n^{3}+3,\ n \in \mathbb{N}\}
$$
</Answer>
</Question>

## Questão 17

<Question>
Escreva o seguinte conjunto, fornecendo-lhe uma propriedade característica
que envolve todos os elementos.

$$
A = \{-3, -1, 5, 15, 29, 47, 69, \ldots\}
$$

<Resolution>

Numerando os termos a partir de $n = 0$, montamos a tabela de diferenças: a
linha $\Delta$ traz a diferença entre cada termo e o **anterior** (não são os
elementos do conjunto), e $\Delta^{2}$ faz o mesmo sobre a linha $\Delta$.

$$
\begin{array}{r|rrrrrrr}
n & 0 & 1 & 2 & 3 & 4 & 5 & 6 \\
\hline
f(n) & -3 & -1 & 5 & 15 & 29 & 47 & 69 \\
\Delta & & 2 & 6 & 10 & 14 & 18 & 22 \\
\Delta^{2} & & & 4 & 4 & 4 & 4 & 4
\end{array}
$$

As segundas diferenças são constantes e iguais a $4$ — logo o termo geral é
de $2°$ grau: $f(n) = an^{2}+bn+c$.

$$
f(0) = c = -3
$$

$$
f(1) = a+b+c = -1 \;\Rightarrow\; a+b = 2
$$

$$
f(2) = 4a+2b+c = 5 \;\Rightarrow\; 4a+2b = 8 \;\Rightarrow\; 2a+b = 4
$$

Subtraindo $a+b=2$ de $2a+b=4$: $a = 2$, logo $b = 0$.

$$
f(n) = 2n^{2} - 3
$$

</Resolution>

<Answer>
$$
A = \{x \in \mathbb{Z} / x = 2n^{2}-3,\ n \in \mathbb{N}\}
$$
</Answer>
</Question>

Sejam $A$, $B$, $C$ e $D$ conjuntos.

## Questão 18

<Question>
Mostre que se $A = B$ e $B = C \Rightarrow A = C$.

<Answer>
Dem.:

<Proof>

Temos que $(\forall x)\ x \in A \iff x \in B$ e $(\forall y)\ y \in B \iff y
\in C$.

Logo, $x \in B \Rightarrow x \in C$.

Assim, $x \in A \Rightarrow x \in C$.

Então, $A \subseteq C$.

Já que $y \in C \Rightarrow y \in B$.

Logo, $y \in C \Rightarrow y \in A$.

Assim, $C \subseteq A$.

Logo, como $A \subseteq C$ e $C \subseteq A \Rightarrow A = C$. $\blacksquare$

</Proof>
</Answer>
</Question>

## Questão 19

<Question>
Mostre que $A \subseteq B$ e $B \subseteq C \Rightarrow A \subseteq C$.

<Answer>
Dem.:

<Proof>

Temos que $(\forall x),\ x \in A \Rightarrow x \in B$ e $(\forall y),\ y \in
B \Rightarrow y \in C$.

Como $y \in C \Rightarrow y \in B$,

Logo, $y \in C \Rightarrow y \in A$.

Assim, $A \subseteq C$. $\blacksquare$

</Proof>
</Answer>
</Question>

## Questão 20

<Question>
Mostre que $A \subseteq B$ e $C \subseteq D \Rightarrow (A \cup C) \subseteq
(B \cup D)$.

<Answer>
Dem.:

<Proof>

$$
(A \cup C) = \{x / x \in A \text{ ou } x \in C\}
$$

$$
(B \cup D) = \{x / x \in B \text{ ou } x \in D\}
$$

Temos que $(\forall x),\ x \in A \Rightarrow x \in B$ e $(\forall y),\ y \in
C \Rightarrow y \in D$.

Por definição, $x \in (A \cup C) \Rightarrow x \in A$ ou $x \in C$.

Se $x \in A$, temos que $x \in B \Rightarrow x \in (B \cup D)$,

ou se $x \in C \Rightarrow x \in D$,

Logo, $x \in (B \cup D)$.

Assim, $(A \cup C) \subseteq (B \cup D)$. $\blacksquare$

</Proof>
</Answer>
</Question>

## Questão 21

<Question>
Mostre que $A \subseteq B$ e $C \subseteq D \Rightarrow (A \cap C) \subseteq
(B \cap D)$.

<Answer>
Dem.:

<Proof>

$$
(A \cap C) = \{x / x \in A \text{ e } x \in C\}
$$

$$
(B \cap D) = \{x / x \in B \text{ e } x \in D\}
$$

Temos que $(\forall x),\ x \in A \Rightarrow x \in B$ e $(\forall y),\ y \in
C \Rightarrow y \in D$.

Por definição, $(\forall z) \in (A \cap C) \Rightarrow z \in A$ e $z \in C$.

No entanto, $(\forall z) \in A \Rightarrow z \in B$ e $(\forall z) \in C
\Rightarrow z \in D$.

Logo, $(\forall z) \in (A \cap C) \Rightarrow z \in B$ e $z \in D$.

Assim, $(A \cap C) \subseteq (B \cap D)$. $\blacksquare$

</Proof>
</Answer>
</Question>

## Questão 22

<Question>
Mostre que $A = B$ e $C = D \Rightarrow (A \cup C) = (B \cup D)$.

<Answer>
Dem.:

<Proof>

$$
(A \cup C) = \{x / x \in A \text{ ou } x \in C\}
$$

$$
(B \cup D) = \{x / x \in B \text{ ou } x \in D\}
$$

Temos que $(\forall x),\ x \in A \iff x \in B$ e $(\forall y),\ y \in C \iff
y \in D$.

Vamos provar que $(A \cup C) \subseteq (B \cup D)$.

Para $z \in (A \cup C) \Rightarrow z \in A$ ou $z \in C$.

Se $z \in A \Rightarrow z \in B$, ou se $z \in C \Rightarrow z \in D$.

Logo, $z \in (B \cup D)$.

Agora provaremos que $(B \cup D) \subseteq (A \cup C)$.

Para $w \in (B \cup D) \Rightarrow w \in B$ ou $w \in D$.

Se $w \in B \Rightarrow w \in A$, ou se $w \in D \Rightarrow w \in C$.

Logo, $w \in (A \cup C)$.

Assim, $(A \cup C) = (B \cup D)$. $\blacksquare$

</Proof>
</Answer>
</Question>

## Questão 23

<Question>
Mostre que $A = B$ e $C = D \Rightarrow (A \cap C) = (B \cap D)$.

<Answer>
Dem.:

<Proof>

$$
(A \cap C) = \{x / x \in A \text{ e } x \in C\}
$$

$$
(B \cap D) = \{x / x \in B \text{ e } x \in D\}
$$

Temos que $(\forall x),\ x \in A \iff x \in B$ e $(\forall y),\ y \in C \iff
y \in D$.

Primeiro provaremos que $(B \cap D) \subseteq (A \cap C)$.

Para $z \in (B \cap D) \Rightarrow z \in B$ e $z \in D$.

Logo, $z \in B \Rightarrow z \in A$ e $z \in D \Rightarrow z \in C$.

Assim, $z \in (A \cap C)$.

Agora provaremos que $(A \cap C) \subseteq (B \cap D)$.

Para $w \in (A \cap C) \Rightarrow w \in A$ e $w \in C$.

Logo, $w \in A \Rightarrow w \in B$ e $w \in C \Rightarrow w \in D$.

Assim, $w \in (B \cap D)$.

Portanto, $A=B$ e $C=D \Rightarrow (A \cap C) = (B \cap D)$. $\blacksquare$

</Proof>
</Answer>
</Question>

## Questão 24

<Question>
Mostre que $A - A = \{\,\}$.

<Answer>
Dem.:

<Proof>

Por definição, $A - A = \{x / x \in A \text{ e } x \notin A\}$.

Assim, $x \in \emptyset$.

Ou seja, $A - A \subseteq \emptyset$.

Agora temos que $\emptyset = \{x / x \in A \text{ e } x \notin A\}$.

Ou seja, $x \in A - A$.

Assim, $\emptyset \subseteq A - A$.

Como $A - A \subseteq \emptyset$ e $\emptyset \subseteq A - A$, logo
$A - A = \{\,\}$. $\blacksquare$

</Proof>
</Answer>
</Question>

## Questão 25

<Question>
Prove que $(A \cap B) \subseteq A$, onde $A$ e $B$ são conjuntos
arbitrários.

<Answer>
Dem.:

<Proof>

Por definição, $(\forall x) \in (A \cap B) \Rightarrow x \in A$ e $x \in B$.

Logo, $x \in A$.

Assim, $(A \cap B) \subseteq A$. $\blacksquare$

</Proof>
</Answer>
</Question>

## Questão 26

<Question>
Prove que $A \subseteq (A \cup B)$, onde $A$ e $B$ são conjuntos
arbitrários.

<Answer>
Dem.:

<Proof>

Por definição, $(\forall x) \in A \Rightarrow x \in A$ e $(A \cup B) = \{y
/ y \in A \text{ ou } y \in B\}$.

Assim, $x \in (A \cup B)$.

Logo, $A \subseteq (A \cup B)$. $\blacksquare$

</Proof>
</Answer>
</Question>

## Questão 27

<Question>
Prove que se $A \cup B = A - B$, então $B = \{\,\}$.

<Answer>
Dem.:

<Proof>

Por definição, $(A \cup B) = A - B$.

Logo, $(\forall x) \in (A \cup B) \iff x \in (A - B)$.

Então, $x \in A$ ou $x \in B \iff x \in A$ e $x \notin B$.

Assim, $B = \varnothing$. $\blacksquare$

</Proof>
</Answer>
</Question>

## Questão 28

<Question>
Prove que se $(A - B) \cup (B - A) = A \cup B$, então $A \cap B = \{\,\}$.

<Answer>
Dem.:

<Proof>

Por definição, $(A-B) = \{x / x \in A \text{ e } x \notin B\}$ e $(B-A) =
\{y / y \in B \text{ e } y \notin A\}$.

Assim, $(A-B) \cup (B-A) = \{z / z \in (A-B) \text{ ou } z \in (B-A)\}$.

Logo, $(A-B) \cup (B-A) = z \in (A \cup B)$.

Assim, $(A-B) \cup (B-A) = (A \cup B)$.

Logo, $z \notin A \cap B$.

Assim, $A \cap B = \varnothing$. $\blacksquare$

</Proof>
</Answer>
</Question>

## Questão 29

<Question>
Seja $B$ um conjunto finito e $A \subset B$, então mostre que $\mathrm{Card}(A)
< \mathrm{Card}(B)$.

<Answer>
Dem.:

<Proof>

Temos que $\mathrm{Card}(B) = n$, onde $n \in \mathbb{N}$ é a quantidade de
elementos de $B$.

Como $A \subset B$, então $\mathrm{Card}(A) = m$, onde $m \in \mathbb{N}$ é a
quantidade de elementos de $A$.

Assim, $\forall x,\ \text{se}\ x \in A \Rightarrow x \in B$.

Ou seja, $m < n$.

Assim, $\mathrm{Card}(A) < \mathrm{Card}(B)$. $\blacksquare$

</Proof>
</Answer>
</Question>

## Questão 30

<Question>
Seja $A = \{x / x \in \mathbb{R} \text{ e } x^{2} - 4x + 3 < 0\}$ e $B =
\{x / x \in \mathbb{R} \text{ e } 0 < x < 6\}$. Mostre que $A \subset B$.

<Resolution>

Resolvendo a inequação $x^{2}-4x+3<0$ pela fórmula de Bhaskara:

$$
x = \frac{-(-4) \pm \sqrt{(-4)^{2}-4(1)(3)}}{2(1)} = \frac{4 \pm \sqrt{16-12}}{2}
= \frac{4 \pm 2}{2}
$$

$$
x_{1} = 3 \qquad x_{2} = 1
$$

Como a parábola tem concavidade para cima, a inequação é negativa entre as
raízes:

$$
A = \{x \in \mathbb{R} / 1 < x < 3\}
$$

</Resolution>

<Answer>
Dem.:

<Proof>

Temos que $A = \{x \in \mathbb{R} / 1 < x < 3\}$ e $B = \{x \in \mathbb{R}
/ 0 < x < 6\}$.

Assim, $\forall x \in A \Rightarrow x \in B$.

Logo, $A \subset B$. $\blacksquare$

</Proof>
</Answer>
</Question>

## Questão 31

<Question>
Em relação ao conjunto $A = \{1, 2, 3, 4\}$, quantos subconjuntos ele
possui? Quais são eles?

<Resolution>

Um conjunto com $n$ elementos possui $2^{n}$ subconjuntos. Como $A$ tem $4$
elementos:

$$
2^{4} = 16 \text{ subconjuntos}
$$

</Resolution>

<Answer>
$16$ subconjuntos:

$$
\varnothing,\ \{1\},\ \{2\},\ \{3\},\ \{4\},\ \{1,2\},\ \{1,3\},\ \{1,4\},\
\{2,3\},\ \{2,4\},\ \{3,4\},
$$

$$
\{1,2,3\},\ \{1,2,4\},\ \{1,3,4\},\ \{2,3,4\},\ \{1,2,3,4\}
$$
</Answer>
</Question>

## Questão 32

<Question>
Sejam os conjuntos $A = \{x \in \mathbb{N} / x \text{ é múltiplo de } 2\}$
e $B = \{x \in \mathbb{N} / x \text{ é múltiplo de } 6\}$. Assim sendo,
mostre que $B \subseteq A$.

<Answer>
Dem.:

<Proof>

Por definição, $A = \{x \in \mathbb{N} / x = 2k,\ \text{com}\ k \in
\mathbb{Z}\}$ e $B = \{y \in \mathbb{N} / y = 6m,\ \text{com}\ m \in
\mathbb{Z}\}$.

Assim, $x = 2k \in A$.

Agora, $y = 6m \in B \Rightarrow y = 3 \cdot 2m \in B$.

Logo, $y = 3x$.

Assim, $y \in A$.

Logo, $B \subseteq A$. $\blacksquare$

</Proof>
</Answer>
</Question>

## Questão 33

<Question>
Sejam os conjuntos $A = \{x \in \mathbb{N} / x \text{ é múltiplo de } 5\}$
e $B = \{x \in \mathbb{N} / x \text{ é múltiplo de } 10\}$. Assim sendo,
mostre que $B \subseteq A$.

<Answer>
Dem.:

<Proof>

Por definição, $A = \{x \in \mathbb{N} / x = 5k,\ \text{com}\ k \in
\mathbb{Z}\}$ e $B = \{y \in \mathbb{N} / y = 10m,\ \text{com}\ m \in
\mathbb{Z}\}$.

Assim, $x = 5k \in A$.

Agora, $y = 10m \in B \Rightarrow y = 2 \cdot 5m \in B$.

Logo, $y = 2x$.

Assim, $y \in A$.

Logo, $B \subseteq A$. $\blacksquare$

</Proof>
</Answer>
</Question>

## Questão 34

<Question>
Seja $A = \{x / x \in \mathbb{N} \text{ e } x^{2} < 15\}$ e $B = \{x /
x \in \mathbb{N} \text{ e } 2x < 7\}$. Então mostre que $A = B$.

<Resolution>

$A$: valores naturais com $x^{2}<15$ são $x = 0,1,2,3$ (pois $4^{2}=16 \geq
15$).

$$
A = \{0,1,2,3\}
$$

$B$: valores naturais com $2x<7$, ou seja $x<3{,}5$, são $x = 0,1,2,3$.

$$
B = \{0,1,2,3\}
$$

</Resolution>

<Answer>
Dem.:

<Proof>

Temos que $\forall x \in B \Rightarrow x \in \mathbb{N}$ e $2x<7$.

Logo, $x = 0,1,2,3$.

Assim, $x^{2}<15$.

Ou seja, $x \in A$.

Consequentemente, $B \subseteq A$. $\blacksquare$

</Proof>
</Answer>
</Question>

## Questão 35

<Question>
Sejam $A = \{1, 2\}$ e $B = \{3, 4\}$.

a) Encontre $A \times B$.

b) Encontre $B \times A$.

c) Encontre $A^{2}$.

d) Encontre $B^{2}$.

<Answer>
$$
A \times B = \{(1,3), (1,4), (2,3), (2,4)\}
$$

$$
B \times A = \{(3,1), (3,2), (4,1), (4,2)\}
$$

$$
A^{2} = A \times A = \{(1,1), (1,2), (2,1), (2,2)\}
$$

$$
B^{2} = B \times B = \{(3,3), (3,4), (4,3), (4,4)\}
$$
</Answer>
</Question>

## Questão 36

<Question>
Descreva cada um dos conjuntos a seguir, listando seus elementos:

a) $A = \{x / x \in \mathbb{N} \text{ e } x^{2} < 25\}$

b) $B = \{x / x \in \mathbb{N},\ x \text{ é par e } 2 < x < 11\}$

c) $C = \{x / x \in \mathbb{C} \text{ e } x^{2} = -9\}$

d) $D = \{x / x \in \mathbb{Z} \text{ e } |x| < 4\}$

<Answer>
$$
A = \{0, 1, 2, 3, 4\}
$$

$$
B = \{4, 6, 8, 10\}
$$

$$
C = \{-3i,\ 3i\}
$$

$$
D = \{-3, -2, -1, 0, 1, 2, 3\}
$$
</Answer>
</Question>

## Questão 37

<Question>
Descreva cada um dos conjuntos a seguir:

a) $A = \{x / x \in \mathbb{N},\ \exists q\, (q \in \{2, 3\} \text{ e } x =
2q)\}$

b) $B = \{x / \exists y\, \exists z\, (y \in \mathbb{N},\ y \in \{0, 1\},\
z \in \{3, 4\} \text{ e } y < x < z)\}$

<Resolution>

a) Para $q=2$: $x=4$. Para $q=3$: $x=6$.

$$
A = \{4, 6\}
$$

b) Testando as combinações de $y \in \{0,1\}$ e $z \in \{3,4\}$:

$$
y=0,\ z=3 \Rightarrow x \in \{1,2\} \qquad y=0,\ z=4 \Rightarrow x \in
\{1,2,3\}
$$

$$
y=1,\ z=3 \Rightarrow x \in \{2\} \qquad y=1,\ z=4 \Rightarrow x \in \{2,3\}
$$

A união de todos os $x$ possíveis é $\{1,2,3\}$.

</Resolution>

<Answer>
$$
A = \{4, 6\} \qquad B = \{1, 2, 3\}
$$
</Answer>
</Question>

## Questão 38

<Question>
Prove que se $A \subseteq B$, então $\mathcal{P}(A) \subseteq \mathcal{P}(B)$.

<Answer>
Dem.:

<Proof>

Seja $X \in \mathcal{P}(A)$, então $X \subseteq A$.

Como $A \subseteq B$, todo elemento de $X$ também está em $A$ e,
consequentemente, em $B$. Logo, $X \subseteq B$.

Assim, $X \in \mathcal{P}(B)$.

Como $X$ era um elemento arbitrário de $\mathcal{P}(A)$, então
$\mathcal{P}(A) \subseteq \mathcal{P}(B)$. $\blacksquare$

</Proof>
</Answer>
</Question>

## Questão 39

<Question>
Se $A$ é um conjunto tal que $n(A \times A) = 9$ e $\{(2,4), (4,5)\} \subset A
\times A$, determinar $A \times A$.

<Resolution>

Como $n(A \times A) = n(A)^{2} = 9$, então $n(A) = 3$.

Os pares $(2,4)$ e $(4,5)$ pertencem a $A \times A$, então $2, 4, 5 \in A$.
Como $A$ tem exatamente $3$ elementos:

$$
A = \{2, 4, 5\}
$$

</Resolution>

<Answer>
$$
A \times A = \{(2,2), (2,4), (2,5), (4,2), (4,4), (4,5), (5,2), (5,4),
(5,5)\}
$$
</Answer>
</Question>

## Questão 40

<Question>
Dados os conjuntos $A = \{3, 4, 6\}$, $B = \{1, 2\}$ e $C = \{3, 6, 9, 12\}$,
determine o conjunto $(C - A) \times B$.

<Resolution>

$$
C - A = \{9, 12\}
$$

</Resolution>

<Answer>
$$
(C - A) \times B = \{(9,1), (9,2), (12,1), (12,2)\}
$$
</Answer>
</Question>

## Questão 41

<Question>
Dado o conjunto $A = \{0, 1\}$, calcule os valores numéricos que assume o
trinômio $2x + xy - 5y$ para todos os pares ordenados $(x, y)$ que pertencem
ao produto $A \times A$.

<Resolution>

$$
A \times A = \{(0,0), (0,1), (1,0), (1,1)\}
$$

Substituindo cada par no trinômio $2x+xy-5y$:

$$
(0,0):\ 2(0)+0(0)-5(0) = 0
$$

$$
(0,1):\ 2(0)+0(1)-5(1) = -5
$$

$$
(1,0):\ 2(1)+1(0)-5(0) = 2
$$

$$
(1,1):\ 2(1)+1(1)-5(1) = -2
$$

</Resolution>

<Answer>
$(0,0) \to 0$, $(0,1) \to -5$, $(1,0) \to 2$, $(1,1) \to -2$
</Answer>
</Question>

## Questão 42 <Badge>FTD, adaptada</Badge>

<Question>
Considere dois conjuntos $A$ e $B$ não vazios. A união desses conjuntos
possui $31$ elementos, e a intersecção $9$ elementos. Sabendo que há $21$
elementos em $B$, determine a quantidade de elementos em $A$.

<Resolution>

Pelo princípio da inclusão-exclusão:

$$
n(A \cup B) = n(A) + n(B) - n(A \cap B)
$$

$$
31 = n(A) + 21 - 9
$$

$$
n(A) = 31 - 21 + 9 = 19
$$

</Resolution>

<Answer>
$A$ possui $19$ elementos.
</Answer>
</Question>

## Questão 43 <Badge>FTD, adaptada</Badge>

<Question>
Considerando os conjuntos $A$ e $B$ em que

$$
A \cup B = \{-1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12\}
$$

$$
A - B = \{1, 2, 6, 7\} \qquad B - A = \{-1, 0, 8, 9, 10\}
$$

então quais são todos os elementos do conjunto $A \cap B$?

<Resolution>

$A \cap B$ é o que sobra de $A \cup B$ ao remover os elementos exclusivos de
$A$ ($A-B$) e os exclusivos de $B$ ($B-A$):

$$
A \cap B = (A \cup B) - (A-B) - (B-A)
$$

Removendo $\{1,2,6,7\}$ e $\{-1,0,8,9,10\}$ de $\{-1,0,1,2,3,4,5,6,7,8,9,10,11,12\}$,
sobram $\{3,4,5,11,12\}$.

</Resolution>

<Answer>
$$
A \cap B = \{3, 4, 5, 11, 12\}
$$
</Answer>
</Question>

## Questão 44 <Badge>PUCC, adaptada</Badge>

<Question>
Sejam os conjuntos $A = \{x \in \mathbb{R} / 0 \le x \le 5\}$ e $B = \{x
\in \mathbb{R} / 3 \le x \le 7\}$. Assim, o resultado do produto
cartesiano entre os conjuntos, resultante de $(A - B) \times (B - A)$ é
representado por qual das regiões a seguir?

<div className="not-prose my-4 flex justify-center">
  <RegionDiagram xMax="5" yMax="7" xSplit="3" ySplit="5" highlight="top-left" />
</div>

<Alternatives>
  <Alternative>$R_1$</Alternative>
  <Alternative>$R_2$</Alternative>
  <Alternative>$R_3$</Alternative>
  <Alternative>$R_4$</Alternative>
  <Alternative>$R_1 \cup R_4$</Alternative>
</Alternatives>

<Resolution>

$$
A - B = [0, 3) \qquad B - A = (5, 7]
$$

O produto $(A-B) \times (B-A)$ é o retângulo com $x \in [0,3)$ e $y \in
(5,7]$ — o quadrante superior esquerdo do diagrama.

</Resolution>

<Answer>
d) $R_{4}$, pois $(A-B)\times(B-A) = [0,3) \times (5,7]$.
</Answer>
</Question>
